# encyc-psms

./: .gitignore  INSTALL.rst  Makefile  NOTES  README  pyproject.toml  requirements.txt  urls.py
apps/core/: models.py
apps/events/: api.py  timeline.py
apps/locations/: api.py  facilities.py
apps/sources/: admin.py  api.py  models.py  urls.py  views.py  wiki.py
apps/sources/templates/sources/: links.html  mediawiki-file-page.html
apps/tansu/: admin.py  api.py  forms.py  models.py  urls.py  urls1.py  views.py  wiki.py
apps/tansu/templates/tansu/: detail.html  entity-detail.html  entity-tag-list.html  entity-tag.html  index.html
apps/tansu/templatetags/: tansu_tags.py
conf/: gunicorn_psms.conf  nginx.conf  psms.cfg  psms.conf  settings.py  supervisor.conf
debian/: changelog  control  copyright  install  package.py
debian/conf/: gunicorn_psms.conf  settings.py
debian/conf/supervisor/: encyc-psms.conf
psms/: Makefile  manage.py  pytest.ini  requirements.txt  urls.py
psms/apps/locations/: views.py
psms/apps/sources/: api.py  models.py  tests.py  views.py
psms/apps/sources/templates/sources/: mediawiki-file-page.html
psms/core/: models.py
psms/events/: api.py  timeline.py
psms/locations/: api.py  facilities.py
psms/psms/: api.py  settings.py  tests.py  urls.py  wsgi.py
psms/requirements/: _base.txt  dev.txt
psms/sources/: admin.py  api.py  models.py  tests.py  urls.py  views.py  wiki.py
psms/sources/templates/sources/: index.html  links.html
psms/tansu/: admin.py  models.py  urls.py  views.py
psms/tansu/templates/tansu/: instance-detail.html
psms/tansu/templatetags/: tansu_tags.py
requirements/: stage.txt
templates/: base.html
(+1 files in other folders)
